оптимизация изображений в разделе "особенности изготовления", убрал предупрежденяи в консоли, изменил стили для отзывчивочсти некоторых блоков

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -29,6 +29,10 @@ span {
   margin: 0;
 }
 
+img {
+  object-fit: cover;
+}
+
 @font-face {
   font-family: 'Inter';
   src: url('../fonts/Inter.ttf');
