--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,17 +2,31 @@
 
 html {
   font-size: calc(1vw / 19.2);
+  width: 1920rem;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
   padding: 0;
   font-family: 'Inter';
+  width: 1920rem;
   overflow-x: hidden;
 }
 
 * {
   box-sizing: border-box;
+}
+
+button,
+img {
+  user-select: none;
+  -webkit-user-drag: none;
+  outline: none;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 p,
