--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,7 +2,7 @@
 
 html {
   font-size: calc(1vw / 19.2);
-  width: 1920rem;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
@@ -10,8 +10,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Inter';
-  width: 1920rem;
-  overflow-x: hidden;
 }
 
 * {
